# alsa_android

./: .anjuta_sym_db.db  .gitignore  ChangeLog  Makefile.am  README  configure.ac
docs/: notes.txt
src/: Makefile.am  alsa-android.c  ctl-android.c  utils.c  utils.h
