dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(alsa_android, 0.02)
AC_PREFIX_DEFAULT(/usr)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE


AM_PROG_LIBTOOL






PKG_CHECK_MODULES(alsa_android_plugin, alsa)
AC_OUTPUT([
Makefile
src/Makefile
])

